<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/ic_bg"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layout_top"
        android:background="@color/colorPrimary"
        >
        <include
            layout="@layout/header_layout"
            android:id="@+id/layout_header"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_header"

            android:textColor="@color/colorWhite"
            android:fontFamily="@font/nunito_sans_bold"
            android:textSize="@dimen/textsize_small"
            android:layout_marginStart="@dimen/layout_margin"
            android:text="@string/receive_cash"
            android:paddingBottom="@dimen/layout_margin"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_top"
            android:layout_margin="@dimen/layout_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_enter_agent_no_details"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorBlackText"
                android:textStyle="bold"
                android:id="@+id/tvAgentNumber"
                android:textSize="@dimen/textsize_small"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlAgentNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/tvAgentNumber"
                style="@style/TextInputLayoutOutline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAgentNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_agent_no"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_enter_receiver_details"
                app:layout_constraintTop_toBottomOf="@id/tlAgentNo"
                android:textColor="@color/colorBlackText"
                android:textStyle="bold"
                android:id="@+id/tvBeneficiaryDetails"
                android:textSize="@dimen/textsize_small"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/tvBeneficiaryDetails"
                style="@style/TextInputLayoutOutline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_enter_fullname"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlMobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/tlFullName"
                style="@style/TextInputLayoutOutline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_receiver_national_id"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/tlMobileNumber"
                style="@style/TextInputLayoutOutline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDestinationCtry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_receiver_destination_country"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sender_details"
                app:layout_constraintTop_toBottomOf="@id/tlCountry"
                android:textColor="@color/colorBlackText"
                android:textStyle="bold"
                android:id="@+id/tvYourDetails"
                android:textSize="@dimen/textsize_small"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlYourDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/tvYourDetails"
                style="@style/TextInputLayoutOutline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYourFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_sender_fullname"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlYourMobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/tlYourDetails"
                style="@style/TextInputLayoutOutline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYourMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_enter_phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlIdNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintTop_toBottomOf="@id/tlYourMobileNumber"
                style="@style/TextInputLayoutOutline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIdNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_national_id"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReceiveEcobnk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_layout_margin"
                android:layout_marginBottom="50dp"
                android:paddingBottom="@dimen/large_layout_margin"
                android:padding="10dp"
                android:textAllCaps="false"
                android:text="@string/btn_continue_title"
                style="@style/MaterialButtonDefaultStyle"
                app:cornerRadius="50dp"
                app:layout_constraintTop_toBottomOf="@id/tlIdNumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>